# eventcore

./: .travis.yml  README.md  appveyor.yml  dub.sdl  meson.build  travis-ci.sh
examples/: http-server-fibers.d  http-server.d
examples/http-server-fibers/: dub.sdl
examples/http-server-fibers/source/: app.d
examples/http-server/source/: app.d
source/eventcore/: core.d  driver.d  epoll.d  meson.build  posix.d  select.d  socket.d  timer.d
source/eventcore/drivers/: epoll.d  kqueue.d  libasync.d  posix.d  select.d  threadedfile.d  timer.d  winapi.d
source/eventcore/drivers/posix/: cfrunloop.d  dns.d  driver.d  epoll.d  events.d  kqueue.d  pipes.d  posixdriver.d  processes.d  select.d  signals.d  sockets.d  watchers.d
source/eventcore/drivers/posix/loop/: cfrunloop.d  epoll.d  kqueue.d  select.d
source/eventcore/drivers/winapi/: core.d  dns.d  driver.d  events.d  files.d  pipes.d  processes.d  signals.d  sockets.d  watchers.d  winapidriver.d
source/eventcore/internal/: consumablequeue.d  corefoundation.d  coreservices.d  dlist.d  ioworker.d  utils.d  win32.d
tests/: 0-dirwatcher-rec.d  0-dirwatcher.d  0-dns.d  0-event.d  0-file.d  0-runinownerthread.d  0-signal.d  0-tcp-cancelconn.d  0-tcp-readwait.d  0-tcp.d  0-timer.d  0-udp.d  0-usds.d  issue-122-coalesced-sigchld.d  issue-25-periodic-timers.d
